--- a/sh.html
+++ b/sh.html
@@ -10,23 +10,14 @@
     <header>
         <img src="itclub.png" alt="">
         <ul>
-            <li><a href="#">soon</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="#">soon</a></li>
             <li><a href="#">soon</a></li>
             <li><a href="#">soon</a></li>
         </ul>
 </header>
 <content>
-    <a href="ie.html">
-    <section class="content-right">
-        <img src="ie.png" alt="">
-        <h1>كلية صناعة وطاقة</h1>        
-    </section></a>
-    <a href="sh.html">
-    <section class="content-left">
-        <img src="sh.png" alt="">
-        <h1>كلية علوم صحية</h1>
-    </section></a>
+   
 </content>
 <footer>
     <p>&copy; IT Club</p>
