--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
     <header>
             <img src="itclub.png" alt="">
             <ul>
-                <li><a href="#">soon</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="#">soon</a></li>
                 <li><a href="#">soon</a></li>
                 <li><a href="#">soon</a></li>
             </ul>
     </header>
+   
     <content>
         <a href="ie.html">
-        <section class="content-right">
-            <img src="ie.png" alt="">
+        <section class="content-left" id="ie">
+            <img src="ie.jpg" alt="">
             <h1>كلية صناعة وطاقة</h1>        
         </section></a>
         <a href="sh.html">
-        <section class="content-left">
-            <img src="sh.png" alt="">
+        <section class="content-right" id="sh">
+            <img src="sh.jpg" alt="">
             <h1>كلية علوم صحية</h1>
         </section></a>
     </content>
