--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <header>
             <img src="itclub.png" alt="">
             <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="#">soon</a></li>
-                <li><a href="#">soon</a></li>
-                <li><a href="#">soon</a></li>
+                <li>جامعة برج العرب التكنولوجية</li>
             </ul>
     </header>
    
@@ -23,7 +20,7 @@
             <img src="ie.jpg" alt="">
             <h1>كلية صناعة وطاقة</h1>        
         </section></a>
-        <a href="sh.html">
+        <a href="https://drive.google.com/drive/folders/15twISgK8rH4D5upNBhm7EFrTAOuEu-vb?usp=sharing">
         <section class="content-right" id="sh">
             <img src="sh.jpg" alt="">
             <h1>كلية علوم صحية</h1>
