--- a/sh.html
+++ b/sh.html
@@ -10,12 +10,10 @@
     <header>
         <img src="itclub.png" alt="">
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="#">soon</a></li>
-            <li><a href="#">soon</a></li>
-            <li><a href="#">soon</a></li>
+            <li>جامعة برج العرب التكنولوجية</li>
         </ul>
 </header>
+
 <content>
    
 </content>
