--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <a href="ie.html">
         <section class="content-left" id="ie">
             <img src="ie.jpg" alt="">
-            <h1>كلية صناعة وطاقة</h1>        
+            <h1>كلية تكنولوجيا الصناعة والطاقة</h1>        
         </section></a>
         <a href="https://drive.google.com/drive/folders/15twISgK8rH4D5upNBhm7EFrTAOuEu-vb?usp=sharing">
         <section class="content-right" id="sh">
             <img src="sh.jpg" alt="">
-            <h1>كلية علوم صحية</h1>
+            <h1>كلية تكنولوجيا العلوم الصحية</h1>
         </section></a>
     </content>
     <footer>
