--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section></a>
     </content>
     <footer>
-        <p>&copy; IT Club</p>
+        <p>&copy; Designed by IT Club- Information Technology Program</p>
     </footer>
 </body>
 </html>
