--- a/ie.html
+++ b/ie.html
@@ -74,7 +74,7 @@
 </div>
     </content>
 <footer>
-    <p>&copy; Designed by IT Club- Information Technology Program</p>
+    <p><a href="https://itclub-batu.github.io/brief/">&copy; Designed by IT Club- Information Technology Program</a></p>
 </footer>
 <script>
   var collegeSelects = document.querySelectorAll('#college');
