--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section></a>
     </content>
     <footer>
-        <p>&copy; Designed by IT Club- Information Technology Program</p>
+        <p><a href="https://itclub-batu.github.io/brief/">&copy; Designed by IT Club- Information Technology Program</a></p>
     </footer>
 </body>
 </html>
