--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="ie.jpg" alt="">
             <h1>كلية تكنولوجيا الصناعة والطاقة</h1>        
         </section></a>
-        <a href="https://drive.google.com/drive/folders/15twISgK8rH4D5upNBhm7EFrTAOuEu-vb?usp=sharing">
+        <a href="sh.html">
         <section class="content-right" id="sh">
             <img src="sh.jpg" alt="">
             <h1>كلية تكنولوجيا العلوم الصحية</h1>
