--- a/health-sciences.html
+++ b/health-sciences.html
@@ -19,22 +19,20 @@
     <section class="mainContent">
         <!-- title  -->
         <h2>
-            Welcome to the Borg Al Arab Technological University community <br> Choose your college
+            Choose your Department
         </h2>
-        <div class="container">
-            <!-- college industry and energy -->
-            <div class="industry-energy card">
-                <a href="industry&energy.html">
-                    <img src="icons/industry-and-energy.svg" alt="college industry and energy">
-                </a>
+        <section class="departments">
+            <div class="container">
+                <!-- department -->
+                <div class="department card" style="height: fit-content;">
+                    <img src="icons/health-sciences.svg" alt="health-sciences">
+                    <div id="link">
+                        <a href="https://drive.google.com/drive/folders/15twISgK8rH4D5upNBhm7EFrTAOuEu-vb">الصف الأول</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- college health sciences -->
-            <div class="health-sciences card">
-                <a href="health-sciences.html">
-                    <img src="icons/health-sciences.svg" alt="college health sciences">
-                </a>
-            </div>
-        </div>
+        </section>
     </section>
     <footer>
         <p>&copy; Designed by IT Club - Information Technology Program</p>
