--- a/industry&energy.html
+++ b/industry&energy.html
@@ -27,7 +27,7 @@
                 <div class="department card">
                     <img src="icons/information-technology.png" alt="">
                     <div class="dropdown">
-                        <button class=" dropdown-button">تكنولجيا المعلومات</button>
+                        <button class=" dropdown-button">تكنلوجيا المعلومات</button>
                         <div class="dropdown-content">
                         <a href="https://drive.google.com/drive/folders/18AhP41n5YlGDGdeq1yqZgHDxiU7TrGum"> الصف الأول </a>
                         <a href="https://drive.google.com/drive/folders/1Uvq2FbQ9JyrVMTH7tVzbwfi2c9c5oPN8">الصف الثاني</a>
