--- a/industry&energy.html
+++ b/industry&energy.html
@@ -27,10 +27,10 @@
                 <div class="department card">
                     <img src="icons/information-technology.png" alt="">
                     <div class="dropdown">
-                        <button class=" dropdown-button">تكنلوجيا المعلومات</button>
+                        <button class=" dropdown-button">برنامج تكنولوجيا المعلومات</button>
                         <div class="dropdown-content">
-                        <a href="https://drive.google.com/drive/folders/18AhP41n5YlGDGdeq1yqZgHDxiU7TrGum"> الصف الأول </a>
-                        <a href="https://drive.google.com/drive/folders/1Uvq2FbQ9JyrVMTH7tVzbwfi2c9c5oPN8">الصف الثاني</a>
+                        <a href="https://drive.google.com/drive/folders/18AhP41n5YlGDGdeq1yqZgHDxiU7TrGum"> الفرقة الأولى </a>
+                        <a href="https://drive.google.com/drive/folders/1Uvq2FbQ9JyrVMTH7tVzbwfi2c9c5oPN8"> الفرقة الثانية</a>
                         </div>
                     </div>
                 </div>
@@ -38,10 +38,10 @@
                 <div class="department card">
                         <img src="icons/train.png" alt="">
                         <div class="dropdown">
-                        <button class="dropdown-button">برنامج تكنلوجيا السكك الحديديه</button>
+                        <button class="dropdown-button">برنامج تكنولوجيا السكك الحديدية</button>
                         <div class="dropdown-content">
-                        <a href="https://drive.google.com/drive/folders/1NFYWc4WNFdEXRKoVQ9JgAJLReLinLaSH">الصف الأول</a>
-                        <a href="https://drive.google.com/drive/folders/12V8Iq9lyWUyS6Whmviw9OCggdMR1v9V-">الصف الثاني</a>
+                        <a href="https://drive.google.com/drive/folders/1NFYWc4WNFdEXRKoVQ9JgAJLReLinLaSH"> الفرقة الأولى</a>
+                        <a href="https://drive.google.com/drive/folders/12V8Iq9lyWUyS6Whmviw9OCggdMR1v9V-"> الفرقة الثانية</a>
                         </div>
                     </div>
                 </div>
@@ -49,10 +49,10 @@
                 <div class="department card">
                     <img src="icons/food-industries-technology.svg" alt="food industries technology">
                     <div class="dropdown">
-                        <button class="dropdown-button">برنامج تكنلوجيا الصناعات الغذائيه</button>
+                        <button class="dropdown-button">برنامج تكنولوجيا التصنيع الغذائي</button>
                         <div class="dropdown-content">
-                        <a href="https://drive.google.com/drive/folders/1BabuNp3xUUCturQSv5UALKl8uZLwkNSh">الصف الأول</a>
-                        <a href="https://drive.google.com/drive/folders/16WmQCc7oWQFT-4e3_3hv4w5BvSs82HZP">الصف الثاني</a>
+                        <a href="https://drive.google.com/drive/folders/1BabuNp3xUUCturQSv5UALKl8uZLwkNSh">الفرقة الأولى </a>
+                        <a href="https://drive.google.com/drive/folders/16WmQCc7oWQFT-4e3_3hv4w5BvSs82HZP">الفرقة الثانية </a>
                         </div>
                     </div>
                 </div>
