--- a/health-sciences.html
+++ b/health-sciences.html
@@ -27,7 +27,7 @@
                 <div class="department card" style="height: fit-content;">
                     <img src="icons/health-sciences.svg" alt="health-sciences">
                     <div id="link">
-                        <a href="https://drive.google.com/drive/folders/15twISgK8rH4D5upNBhm7EFrTAOuEu-vb"> الفرقة الأولى</a>
+                        <a href="https://drive.google.com/drive/folders/15twISgK8rH4D5upNBhm7EFrTAOuEu-vb">الفرقة الأولى</a>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,9 @@
         </section>
     </section>
     <footer>
-        <p>&copy; Designed by IT Club - Information Technology Program</p>
+        <a href="https://itclub-batu.github.io/brief/">
+            <p>&copy; Designed by IT Club - Information Technology Program</p>
+        </a>
     </footer>
 <script src="script.js"></script>
 </body>
