--- a/industry&energy.html
+++ b/industry&energy.html
@@ -29,7 +29,7 @@
                     <div class="dropdown">
                         <button class=" dropdown-button">برنامج تكنولوجيا المعلومات</button>
                         <div class="dropdown-content">
-                        <a href="https://drive.google.com/drive/folders/18AhP41n5YlGDGdeq1yqZgHDxiU7TrGum"> الفرقة الأولى </a>
+                        <a href="https://drive.google.com/drive/folders/18AhP41n5YlGDGdeq1yqZgHDxiU7TrGum"> الفرقة الأولى</a>
                         <a href="https://drive.google.com/drive/folders/1Uvq2FbQ9JyrVMTH7tVzbwfi2c9c5oPN8"> الفرقة الثانية</a>
                         </div>
                     </div>
@@ -38,10 +38,10 @@
                 <div class="department card">
                         <img src="icons/train.png" alt="">
                         <div class="dropdown">
-                        <button class="dropdown-button">برنامج تكنولوجيا السكك الحديدية</button>
+                        <button class="dropdown-button"> برنامج تكنولوجيا السكك الحديدية </button>
                         <div class="dropdown-content">
-                        <a href="https://drive.google.com/drive/folders/1NFYWc4WNFdEXRKoVQ9JgAJLReLinLaSH"> الفرقة الأولى</a>
-                        <a href="https://drive.google.com/drive/folders/12V8Iq9lyWUyS6Whmviw9OCggdMR1v9V-"> الفرقة الثانية</a>
+                        <a href="https://drive.google.com/drive/folders/1NFYWc4WNFdEXRKoVQ9JgAJLReLinLaSH">الفرقة الأولى</a>
+                        <a href="https://drive.google.com/drive/folders/12V8Iq9lyWUyS6Whmviw9OCggdMR1v9V-">الفرقة الثانية</a>
                         </div>
                     </div>
                 </div>
@@ -51,8 +51,8 @@
                     <div class="dropdown">
                         <button class="dropdown-button">برنامج تكنولوجيا التصنيع الغذائي</button>
                         <div class="dropdown-content">
-                        <a href="https://drive.google.com/drive/folders/1BabuNp3xUUCturQSv5UALKl8uZLwkNSh">الفرقة الأولى </a>
-                        <a href="https://drive.google.com/drive/folders/16WmQCc7oWQFT-4e3_3hv4w5BvSs82HZP">الفرقة الثانية </a>
+                        <a href="https://drive.google.com/drive/folders/1BabuNp3xUUCturQSv5UALKl8uZLwkNSh">الفرقة الأولى</a>
+                        <a href="https://drive.google.com/drive/folders/16WmQCc7oWQFT-4e3_3hv4w5BvSs82HZP">الفرقة الثانية</a>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,9 @@
         </section>
     </section>
     <footer>
-        <p>&copy; Designed by IT Club - Information Technology Program</p>
+        <a href="https://itclub-batu.github.io/brief/">
+            <p>&copy; Designed by IT Club - Information Technology Program</p>
+        </a>
     </footer>
 <script src="script.js"></script>
 </body>
