--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         </div>
     </section>
     <footer>
-        <p>&copy; Designed by IT Club - Information Technology Program</p>
+        <a href="https://itclub-batu.github.io/brief/">
+            <p>&copy; Designed by IT Club - Information Technology Program</p>
+        </a>
     </footer>
 <script src="script.js"></script>
 </body>
