--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="navbar">
         <a href="index.html"><img src="icons/logo-noBG.png" alt=""></a>
         
-        <p>Borg Al-Arab Technological</p>
-        <a href="index.html"><img src="icons/it_club.png" alt=""></a>
+        <p>Borg Al-Arab Technological University</p>
+        <a href="https://itclub-batu.github.io/brief/"><img src="icons/it_club.png" alt=""></a>
     </header>
     <!-- cards  -->
     <section class="mainContent">
