--- a/index.html
+++ b/index.html
@@ -1,46 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="icons/logo-noBG.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <title>Borg Al Arab Technological community</title>
-</head>
-<body>
-    <!-- header  -->
-    <header class="navbar">
-        <a href="index.html"><img src="icons/logo-noBG.png" alt=""></a>
-        
-        <p>Borg Al-Arab Technological University</p>
-        <a href="https://itclub-batu.github.io/brief/"><img src="icons/it_club.png" alt=""></a>
-    </header>
-    <!-- cards  -->
-    <section class="mainContent">
-        <!-- title  -->
-        <h2>
-            Welcome to the Borg Al Arab Technological University community <br> Choose your college
-        </h2>
-        <div class="container">
-            <!-- college industry and energy -->
-            <div class="industry-energy card">
-                <a href="industry&energy.html">
-                    <img src="icons/industry-and-energy.svg" alt="college industry and energy">
-                </a>
-            </div>
-            <!-- college health sciences -->
-            <div class="health-sciences card">
-                <a href="health-sciences.html">
-                    <img src="icons/health-sciences.svg" alt="college health sciences">
-                </a>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <a href="https://itclub-batu.github.io/brief/">
-            <p>&copy; Designed by IT Club - Information Technology Program</p>
+  <head>
+    <style>
+      .text-bold-dark-gray {
+        font-weight: bold !important;
+        color: #555 !important;
+      }
+    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IT_Club</title>
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"/>
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <div class="container-fluid d-flex justify-content-between">
+        <a href="index.html" class="navbar-brand">
+          <img src="icons/logo.png" alt="" class="w-auto" height="95px" />
         </a>
+        <a href="https://itclub-batu.github.io/brief/" class="navbar-brand">
+          <img src="icons/it_club.png" alt="" width="95px" />
+        </a>
+      </div>
+    </nav>
+
+    <!-- Header -->
+    <div class="container-fluid p-0">
+      <header class="d-flex justify-content-start w-100">
+        <div class="image-container w-100">
+          <img src="icons/header.jpg" alt="" class="w-100 header-img" />
+          <div class="overlay">
+            <div class="text-white fs-1 fw-bold text-center text-capitalize">
+              Choose your college
+            </div>
+          </div>
+        </div>
+      </header>
+    </div>
+
+    <!-- College Cards Section -->
+    <div class="container p-5">
+      <div class="d-flex justify-content-around flex-wrap gap-5">
+        <!-- Industry and Energy College Card -->
+        <div
+          class="card custom-card slide-in-left col-12 d-flex align-items-center justify-content-center"
+          data-aos="fade-right"
+          style="width: 18rem; height: 15rem"
+        >
+          <!-- Link to Industry and Energy Page -->
+          <a href="industry-and-energy.html" class="text-center">
+            <!-- College Image -->
+            <img
+              src="icons/industry-and-energy.png"
+              class="card-img-top"
+              alt="..."
+              style="width: 150px; height: 150px"
+            />
+            <div class="card-body text-center margin-top">
+              <!-- College Title -->
+              <h5
+                class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray"
+              >
+                Industry and Energy
+              </h5>
+            </div>
+          </a>
+        </div>
+
+        <!-- Health Sciences College Card -->
+        <div
+          class="card slide-in-left col-12 d-flex align-items-center justify-content-center"
+          data-aos="fade-right"
+          style="width: 18rem; height: 15rem"
+        >
+          <!-- Link to Health Sciences Page -->
+          <a href="health-sciences.html" class="text-center">
+            <!-- College Image -->
+            <img
+              src="icons/health-sciences.png"
+              class="card-img-top"
+              alt="..."
+              style="width: 150px; height: 150px"
+            />
+            <div class="card-body text-center">
+              <!-- College Title -->
+              <h4
+                class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray"
+              >
+                Health Sciences
+              </h4>
+            </div>
+          </a>
+        </div>
+
+        <!-- Courses College Card -->
+        <div
+          class="card slide-in-left col-12 d-flex align-items-center justify-content-center"
+          data-aos="fade-right"
+          style="width: 18rem; height: 15rem"
+        >
+          <!-- Link to Courses Page -->
+          <a href="courses.html" class="text-center">
+            <!-- College Image -->
+            <img
+              src="icons/programming-course.png"
+              class="card-img-top"
+              alt="..."
+              style="width: 150px; height: 150px"
+            />
+            <div class="card-body text-center">
+              <!-- College Title -->
+              <h5
+                class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray"
+              >
+                Courses
+              </h5>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-dark-subtle text-white py-5">
+      <div class="container">
+        <div class="row justify-content-between">
+          <!-- Developer Info Column -->
+          <div class="col-md-4 mb-4 text-center">
+            <img
+              src="icons/it_club.png"
+              alt="Logo"
+              class="img-fluid mb-3"
+              style="max-width: 80px"
+            />
+            <p class="text-secondary">
+              &copy; Designed by IT Club - Information Technology Program
+            </p>
+            <!-- Social Media Links -->
+            <div class="social-links">
+              <a href="#" class="text-white me-2"
+                ><i class="bi bi-facebook" id="media"></i
+              ></a>
+              <a href="#" class="text-white me-2"
+                ><i class="bi bi-instagram" id="media"></i
+              ></a>
+              <a href="#" class="text-white me-2"
+                ><i class="bi bi-youtube" id="media"></i
+              ></a>
+              <a href="#" class="text-white me-2"
+                ><i class="bi bi-whatsapp" id="media"></i
+              ></a>
+            </div>
+          </div>
+
+          <!-- Quick Links Column -->
+          <div class="col-md-2 mb-4 text-center">
+            <h5>Quick Links</h5>
+            <ul class="list-unstyled text-capitalize">
+              <li><a href="#" class="btn-link text-secondary">Home</a></li>
+              <li><a href="#" class="btn-link text-secondary">Courses</a></li>
+              <li><a href="#" class="btn-link text-secondary">About Us</a></li>
+            </ul>
+          </div>
+
+          <!-- Latest Updates Column -->
+          <div class="col-md-4">
+            <h5>Latest Updates</h5>
+            <p>Stay tuned for the latest news and updates.</p>
+            <form>
+              <div class="mb-3">
+                <input
+                  type="email"
+                  class="form-control bg-inside-dark text-white"
+                  placeholder="Enter your email"
+                />
+              </div>
+              <button class="btn-Subscribe">Subscribe</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </footer>
-<script src="script.js"></script>
-</body>
+
+    <!-- Scripts -->
+    <script src="js/popper.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  </body>
 </html>
