--- a/division.html
+++ b/division.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>BORG AL ARAB TECHNOLOGICAL UNIVERSITY</title>
     <!-- 
         .bg-inside-dark
         .bg-dark-subtle
@@ -33,7 +34,7 @@
     <div class="container-fluid p-0">
         <header class="d-flex justify-content-start w-100">
             <div class="image-container w-100">
-                <img src="icons/college_3.jpg" alt="" class="w-100 header-img">
+                <!-- <img src="icons/college_3.jpg" alt="" class="w-100 header-img"> -->
                 <div class="overlay">
                     <div class="text-white fs-1 fw-bold text-center text-capitalize">choose your division</div>
                 </div>
@@ -44,7 +45,8 @@
     <!-- Body Section -->
     <div class="container p-5">
         <div class="d-flex justify-content-around flex-wrap gap-5">
-
+            <!-- notification -->
+            <div class="notification"></div>
             <!-- First Division -->
             <div class="mb-3 text-center slide-in-left" data-aos="fade-right">
                 <!-- New Card -->
@@ -81,6 +83,7 @@
     </div>
 
 
+
     <!-- footer -->
     <footer class="bg-dark-subtle text-white py-5">
         <div class="container">
@@ -91,19 +94,19 @@
                     <p class="text-secondary">&copy; Designed by IT Club - Information Technology Program</p>
                     <!-- Add social media links -->
                     <div class="social-links">
-                        <a href="#" class="text-white me-2"><i class="bi bi-facebook" id="media"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-instagram" id="media"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-youtube" id="media"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-whatsapp" id="media"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100092738074559&mibextid=ZbWKwL" class="text-white me-2"><i class="bi bi-facebook" id="media"></i></a>
+                        <a href="https://www.instagram.com/information.technology_club" class="text-white me-2"><i class="bi bi-instagram" id="media"></i></a>
+                        <a href="https://www.youtube.com/@ITClub-jw2vw" class="text-white me-2"><i class="bi bi-youtube" id="media"></i></a>
+                        <a href="https://chat.whatsapp.com/CTTKCD46siZDCNlH41kHKO" class="text-white me-2"><i class="bi bi-whatsapp" id="media"></i></a>
                     </div>
                 </div>
                 <!-- Quick Links -->
                 <div class="col-md-2 mb-4 text-center">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled text-capitalize">
-                        <li><a href="#" class="btn-link text-secondary">home</a></li>
-                        <li><a href="#" class="btn-link text-secondary">courses</a></li>
-                        <li><a href="#" class="btn-link text-secondary">abut us</a></li>
+                        <li><a href="index.html" class="btn-link text-secondary">home</a></li>
+                        <li><a href="courses.html" class="btn-link text-secondary">courses</a></li>
+                        <li><a href="https://itclub-batu.github.io/brief/" class="btn-link text-secondary">abut us</a></li>
                     </ul>
                 </div>
                 <!-- Latest Updates Column -->
@@ -114,7 +117,7 @@
                         <div class="mb-3">
                             <input type="email" class="form-control bg-inside-dark text-white" placeholder="Enter your email">
                         </div>
-                        <button class="btn-Subscribe">Subscribe</button>
+                        <button class="btn-Subscribe btn-incomplete" onclick="showAlert()">Subscribe</button>
                     </form>
                 </div>
             </div>
