--- a/health-sciences.html
+++ b/health-sciences.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT_Club</title>
+    <title>BORG AL ARAB TECHNOLOGICAL UNIVERSITY</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -34,7 +34,7 @@
     <div class="container-fluid p-0">
         <header class="d-flex justify-content-start w-100">
             <div class="image-container w-100">
-                <img src="icons/header(3).png" alt="" class="w-100 header-img">
+                <!-- <img src="icons/header(3).png" alt="" class="w-100 header-img"> -->
                 <div class="overlay">
                     <div class="text-white fs-1 fw-bold text-center text-capitalize">health sciences</div>
                 </div>
@@ -44,9 +44,10 @@
         
     <!-- Body Section -->
     <div class="container p-5">
+        <!-- notification -->
+        <div class="notification"></div>
         <!-- Departments -->
         <div class="d-flex justify-content-around flex-wrap gap-5">
-
             <!-- Health Sciences - First Division -->
             <div class="mb-3 text-center">
                 <!-- New Card -->
@@ -64,11 +65,11 @@
             </div>
 
             <!-- Information Technology Department -->
-            <div class="mb-3 text-center">
+            <div class="mb-3 text-center ">
                 <!-- New Card -->
                 <div class="card slide-in-left col-12 d-flex align-items-center justify-content-center" data-aos="fade-right" style="width: 18rem; height: 15rem">
                     <!-- Department Link -->
-                    <a href="information-technology.html" class="text-center">
+                    <a href="#" class="text-center btn-incomplete" onclick="showAlert()">
                         <!-- Department Image -->
                         <img src="icons/information-technology.png" class="card-img-top" alt="Information Technology Department" style="width: 150px; height: 150px">
                         <div class="card-body text-center">
@@ -84,7 +85,7 @@
                 <!-- New Card -->
                 <div class="card slide-in-left col-12 d-flex align-items-center justify-content-center" data-aos="fade-right" style="width: 18rem; height: 15rem">
                     <!-- Department Link -->
-                    <a href="nursing-assistant.html" class="text-center">
+                    <a href="#" class="text-center btn-incomplete" onclick="showAlert()">
                         <!-- Department Image -->
                         <img src="icons/Nursing Assistant.png" class="card-img-top" alt="Nursing Assistant Technology Department" style="width: 150px; height: 150px">
                         <div class="card-body text-center">
@@ -100,9 +101,9 @@
                 <!-- New Card -->
                 <div class="card slide-in-left col-12 d-flex align-items-center justify-content-center" data-aos="fade-right" style="width: 18rem; height: 15rem">
                     <!-- Department Link -->
-                    <a href="pharmacy-assistant.html" class="p-2 text-center">
+                    <a href="#" class="p-2 text-center btn-incomplete" onclick="showAlert()">
                         <!-- Department Image -->
-                        <img src="icons/pharmacy.png" class="card-img-top" alt="Pharmacy Assistant Technology Department" style="width: 150px; height: 150px">
+                        <img src="icons/pharmacy.png" class="card-img-top" alt="Pharmacy Assistant Technology Department" style="width: 135px; height: 135px">
                         <div class="card-body text-center">
                             <!-- Department Title -->
                             <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا مساعد صيدلي</h5>
@@ -116,9 +117,9 @@
                 <!-- New Card -->
                 <div class="card slide-in-left col-12 d-flex align-items-center justify-content-center" data-aos="fade-right" style="width: 18rem; height: 15rem">
                     <!-- Department Link -->
-                    <a href="dental-technology.html" class="p-2 text-center">
+                    <a href="#" class="p-2 text-center btn-incomplete" onclick="showAlert()">
                         <!-- Department Image -->
-                        <img src="icons/Dental Technology.png" class="card-img-top" alt="Dental Technology Department" style="width: 150px; height: 150px">
+                        <img src="icons/Dental Technology.png" class="card-img-top" alt="Dental Technology Department" style="width: 135px; height: 135px">
                         <div class="card-body text-center">
                             <!-- Department Title -->
                             <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا تركيبات الأسنان</h5>
@@ -132,7 +133,7 @@
                 <!-- New Card -->
                 <div class="card slide-in-left col-12 d-flex align-items-center justify-content-center" data-aos="fade-right" style="width: 18rem; height: 15rem">
                     <!-- Department Link -->
-                    <a href="pharmaceutical-manufacturing-technology.html" class="p-2 text-center">
+                    <a href="#" class="p-2 text-center btn-incomplete" onclick="showAlert()">
                         <!-- Department Image -->
                         <img src="icons/pharmaceutical.png" class="card-img-top" alt="Pharmaceutical Manufacturing Technology Department" style="width: 150px; height: 150px">
                         <div class="card-body text-center">
@@ -158,19 +159,19 @@
                     <p class="text-secondary">&copy; Designed by IT Club - Information Technology Program</p>
                     <!-- Add social media links -->
                     <div class="social-links">
-                        <a href="#" class="text-white me-2"><i class="bi bi-facebook" id="media"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-instagram" id="media"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-youtube" id="media"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-whatsapp" id="media"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100092738074559&mibextid=ZbWKwL" class="text-white me-2"><i class="bi bi-facebook" id="media"></i></a>
+                        <a href="https://www.instagram.com/information.technology_club" class="text-white me-2"><i class="bi bi-instagram" id="media"></i></a>
+                        <a href="https://www.youtube.com/@ITClub-jw2vw" class="text-white me-2"><i class="bi bi-youtube" id="media"></i></a>
+                        <a href="https://chat.whatsapp.com/CTTKCD46siZDCNlH41kHKO" class="text-white me-2"><i class="bi bi-whatsapp" id="media"></i></a>
                     </div>
                 </div>
                 <!-- Quick Links -->
                 <div class="col-md-2 mb-4 text-center">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled text-capitalize">
-                        <li><a href="#" class="btn-link text-secondary">home</a></li>
-                        <li><a href="#" class="btn-link text-secondary">courses</a></li>
-                        <li><a href="#" class="btn-link text-secondary">abut us</a></li>
+                        <li><a href="index.html" class="btn-link text-secondary">home</a></li>
+                        <li><a href="courses.html" class="btn-link text-secondary">courses</a></li>
+                        <li><a href="https://itclub-batu.github.io/brief/" class="btn-link text-secondary">abut us</a></li>
                     </ul>
                 </div>
                 <!-- Latest Updates Column -->
@@ -181,7 +182,7 @@
                         <div class="mb-3">
                             <input type="email" class="form-control bg-inside-dark text-white" placeholder="Enter your email">
                         </div>
-                        <button class="btn-Subscribe">Subscribe</button>
+                        <button class="btn-Subscribe btn-incomplete" onclick="showAlert()">Subscribe</button>
                     </form>
                 </div>
             </div>
