--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT_Club</title>
+    <title>BORG AL ARAB TECHNOLOGICAL UNIVERSITY</title>
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"/>
     <link rel="stylesheet" href="css/bootstrap.css" />
@@ -32,7 +32,7 @@
     <div class="container-fluid p-0">
       <header class="d-flex justify-content-start w-100">
         <div class="image-container w-100">
-          <img src="icons/header.jpg" alt="" class="w-100 header-img" />
+          <!-- <img src="icons/header.jpg" alt="" class="w-100 header-img" /> -->
           <div class="overlay">
             <div class="text-white fs-1 fw-bold text-center text-capitalize">
               Choose your college
@@ -44,6 +44,8 @@
 
     <!-- College Cards Section -->
     <div class="container p-5">
+      <!-- notification -->
+      <div class="notification"></div>
       <div class="d-flex justify-content-around flex-wrap gap-5">
         <!-- Industry and Energy College Card -->
         <div
@@ -104,7 +106,7 @@
           style="width: 18rem; height: 15rem"
         >
           <!-- Link to Courses Page -->
-          <a href="courses.html" class="text-center">
+          <a href="#" class="text-center btn-incomplete" onclick="showAlert()">
             <!-- College Image -->
             <img
               src="icons/programming-course.png"
@@ -125,72 +127,51 @@
       </div>
     </div>
 
-    <!-- Footer -->
+    <!-- footer -->
     <footer class="bg-dark-subtle text-white py-5">
       <div class="container">
-        <div class="row justify-content-between">
-          <!-- Developer Info Column -->
-          <div class="col-md-4 mb-4 text-center">
-            <img
-              src="icons/it_club.png"
-              alt="Logo"
-              class="img-fluid mb-3"
-              style="max-width: 80px"
-            />
-            <p class="text-secondary">
-              &copy; Designed by IT Club - Information Technology Program
-            </p>
-            <!-- Social Media Links -->
-            <div class="social-links">
-              <a href="#" class="text-white me-2"
-                ><i class="bi bi-facebook" id="media"></i
-              ></a>
-              <a href="#" class="text-white me-2"
-                ><i class="bi bi-instagram" id="media"></i
-              ></a>
-              <a href="#" class="text-white me-2"
-                ><i class="bi bi-youtube" id="media"></i
-              ></a>
-              <a href="#" class="text-white me-2"
-                ><i class="bi bi-whatsapp" id="media"></i
-              ></a>
-            </div>
-          </div>
-
-          <!-- Quick Links Column -->
-          <div class="col-md-2 mb-4 text-center">
-            <h5>Quick Links</h5>
-            <ul class="list-unstyled text-capitalize">
-              <li><a href="#" class="btn-link text-secondary">Home</a></li>
-              <li><a href="#" class="btn-link text-secondary">Courses</a></li>
-              <li><a href="#" class="btn-link text-secondary">About Us</a></li>
-            </ul>
-          </div>
-
-          <!-- Latest Updates Column -->
-          <div class="col-md-4">
-            <h5>Latest Updates</h5>
-            <p>Stay tuned for the latest news and updates.</p>
-            <form>
-              <div class="mb-3">
-                <input
-                  type="email"
-                  class="form-control bg-inside-dark text-white"
-                  placeholder="Enter your email"
-                />
+          <div class="row justify-content-between">
+              <!-- Developer Info Column -->
+              <div class="col-md-4 mb-4 text-center">
+                  <img src="icons/it_club.png" alt="Logo" class="img-fluid mb-3" style="max-width: 80px;">
+                  <p class="text-secondary">&copy; Designed by IT Club - Information Technology Program</p>
+                  <!-- Add social media links -->
+                  <div class="social-links">
+                      <a href="https://www.facebook.com/profile.php?id=100092738074559&mibextid=ZbWKwL" class="text-white me-2"><i class="bi bi-facebook" id="media"></i></a>
+                      <a href="https://www.instagram.com/information.technology_club" class="text-white me-2"><i class="bi bi-instagram" id="media"></i></a>
+                      <a href="https://www.youtube.com/@ITClub-jw2vw" class="text-white me-2"><i class="bi bi-youtube" id="media"></i></a>
+                      <a href="https://chat.whatsapp.com/CTTKCD46siZDCNlH41kHKO" class="text-white me-2"><i class="bi bi-whatsapp" id="media"></i></a>
+                  </div>
               </div>
-              <button class="btn-Subscribe">Subscribe</button>
-            </form>
+              <!-- Quick Links -->
+              <div class="col-md-2 mb-4 text-center">
+                  <h5>Quick Links</h5>
+                  <ul class="list-unstyled text-capitalize">
+                      <li><a href="index.html" class="btn-link text-secondary">home</a></li>
+                      <li><a href="courses.html" class="btn-link text-secondary">courses</a></li>
+                      <li><a href="https://itclub-batu.github.io/brief/" class="btn-link text-secondary">abut us</a></li>
+                  </ul>
+              </div>
+              <!-- Latest Updates Column -->
+              <div class="col-md-4">
+                  <h5>Latest Updates</h5>
+                  <p>Stay tuned for the latest news and updates.</p>
+                  <form action="#">
+                      <div class="mb-3">
+                          <input type="email" class="form-control bg-inside-dark text-white" placeholder="Enter your email">
+                      </div>
+                      <button class="btn-Subscribe btn-incomplete" onclick="showAlert()">Subscribe</button>
+                    </form>
+              </div>
           </div>
-        </div>
       </div>
-    </footer>
+  </footer>
 
     <!-- Scripts -->
     <script src="js/popper.min.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
