--- a/industry-and-energy.html
+++ b/industry-and-energy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT_Club</title>
+    <title>BORG AL ARAB TECHNOLOGICAL UNIVERSITY</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -34,7 +34,7 @@
     <div class="container-fluid p-0">
         <header class="d-flex justify-content-start w-100">
             <div class="image-container w-100">
-                <img src="icons/header(1).png" alt="" class="w-100 header-img">
+                <!-- <img src="icons/header(1).png" alt="" class="w-100 header-img"> -->
                 <div class="overlay">
                     <div class="text-white fs-1 fw-bold text-center text-capitalize">industry and energy</div>
                 </div>
@@ -44,6 +44,8 @@
         
     <!-- Division Cards Section -->
     <div class="container p-5">
+        <!-- notification -->
+        <div class="notification"></div>
         <!-- Division Cards Group -->
         <div class="d-flex justify-content-around flex-wrap gap-5">
 
@@ -70,7 +72,7 @@
                 <div class="card slide-in-left col-12 d-flex align-items-center justify-content-center" data-aos="fade-right" style="width: 18rem; height: 15rem">
                     <!-- Division Link -->
                     <!-- It retrieves the 'img = image path', 'url_1 = link for first year students', and 'url_2 = link for second year students' parameters from the URL and updates elements on the page accordingly. -->
-                    <a href="division.html?img=textile.png&url_1=#&url_2=#" class="p-2 text-center">
+                    <a href="division.html?img=textile.png&url_1=https://itclub-batu.github.io/batu-google-drive/division_1.html&url_2=https://itclub-batu.github.io/batu-google-drive/division_2.html" class="p-2 text-center">
                         <!-- Division Image -->
                         <img src="icons/textile.png" class="card-img-top" alt="Textile Technology Program" style="width: 150px; height: 150px">
                         <div class="card-body text-center">
@@ -104,7 +106,7 @@
                 <div class="card slide-in-left col-12 d-flex align-items-center justify-content-center" data-aos="fade-right" style="width: 18rem; height: 15rem">
                     <!-- Division Link -->
                     <!-- It retrieves the 'img = image path', 'url_1 = link for first year students', and 'url_2 = link for second year students' parameters from the URL and updates elements on the page accordingly. -->
-                    <a href="division.html?img=tractor.png&url_1=https://example1.com&url_2=https://example2.com" class="p-2 text-center">
+                    <a href="#" class="p-2 text-center btn-incomplete" onclick="showAlert()">
                         <!-- Division Image -->
                         <img src="icons/tractor.png" class="card-img-top" alt="Agricultural Machinery Technology Program" style="width: 130px; height: 130px">
                         <div class="card-body text-center">
@@ -121,7 +123,7 @@
                 <div class="card slide-in-left col-12 d-flex align-items-center justify-content-center" data-aos="fade-right" style="width: 18rem; height: 15rem">
                     <!-- Division Link -->
                     <!-- It retrieves the 'img = image path', 'url_1 = link for first year students', and 'url_2 = link for second year students' parameters from the URL and updates elements on the page accordingly. -->
-                    <a href="division.html?img=food-industries-technology.png&url_1=https://drive.google.com/drive/folders/1BabuNp3xUUCturQSv5UALKl8uZLwkNSh&url_2=https://drive.google.com/drive/folders/16WmQCc7oWQFT-4e3_3hv4w5BvSs82HZP" class="p-2 text-center">
+                    <a href="#" class="p-2 text-center btn-incomplete" onclick="showAlert()">
                         <!-- Division Image -->
                         <img src="icons/food-industries-technology.png" class="card-img-top" alt="Food Industries Technology Program" style="width: 170px; height: 170px">
                         <div class="card-body text-center">
@@ -136,6 +138,7 @@
     </div>
 
 
+
     <!-- footer -->
     <footer class="bg-dark-subtle text-white py-5">
         <div class="container">
@@ -146,19 +149,19 @@
                     <p class="text-secondary">&copy; Designed by IT Club - Information Technology Program</p>
                     <!-- Add social media links -->
                     <div class="social-links">
-                        <a href="#" class="text-white me-2"><i class="bi bi-facebook" id="media"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-instagram" id="media"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-youtube" id="media"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-whatsapp" id="media"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100092738074559&mibextid=ZbWKwL" class="text-white me-2"><i class="bi bi-facebook" id="media"></i></a>
+                        <a href="https://www.instagram.com/information.technology_club" class="text-white me-2"><i class="bi bi-instagram" id="media"></i></a>
+                        <a href="https://www.youtube.com/@ITClub-jw2vw" class="text-white me-2"><i class="bi bi-youtube" id="media"></i></a>
+                        <a href="https://chat.whatsapp.com/CTTKCD46siZDCNlH41kHKO" class="text-white me-2"><i class="bi bi-whatsapp" id="media"></i></a>
                     </div>
                 </div>
                 <!-- Quick Links -->
                 <div class="col-md-2 mb-4 text-center">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled text-capitalize">
-                        <li><a href="#" class="btn-link text-secondary">home</a></li>
-                        <li><a href="#" class="btn-link text-secondary">courses</a></li>
-                        <li><a href="#" class="btn-link text-secondary">abut us</a></li>
+                        <li><a href="index.html" class="btn-link text-secondary">home</a></li>
+                        <li><a href="courses.html" class="btn-link text-secondary">courses</a></li>
+                        <li><a href="https://itclub-batu.github.io/brief/" class="btn-link text-secondary">abut us</a></li>
                     </ul>
                 </div>
                 <!-- Latest Updates Column -->
@@ -169,7 +172,7 @@
                         <div class="mb-3">
                             <input type="email" class="form-control bg-inside-dark text-white" placeholder="Enter your email">
                         </div>
-                        <button class="btn-Subscribe">Subscribe</button>
+                        <button class="btn-Subscribe btn-incomplete" onclick="showAlert()">Subscribe</button>
                     </form>
                 </div>
             </div>
