--- a/health-sciences.html
+++ b/health-sciences.html
@@ -71,10 +71,10 @@
                     <!-- Department Link -->
                     <a href="#" class="text-center btn-incomplete" onclick="showAlert()">
                         <!-- Department Image -->
-                        <img src="icons/information-technology.png" class="card-img-top" alt="Information Technology Department" style="width: 150px; height: 150px">
+                        <img src="icons/information-technology.png" class="card-img-top" alt="Information Technology Department" style="width: 130px; height: 130px">
                         <div class="card-body text-center">
                             <!-- Department Title -->
-                            <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا المعلومات</h5>
+                            <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا إدارة المعلوماتية الصحية</h5>
                         </div>
                     </a>
                 </div>
@@ -90,7 +90,7 @@
                         <img src="icons/Nursing Assistant.png" class="card-img-top" alt="Nursing Assistant Technology Department" style="width: 150px; height: 150px">
                         <div class="card-body text-center">
                             <!-- Department Title -->
-                            <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا مساعد تمريض</h5>
+                            <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا الرعاية الصحية</h5>
                         </div>
                     </a>
                 </div>
@@ -106,7 +106,7 @@
                         <img src="icons/pharmacy.png" class="card-img-top" alt="Pharmacy Assistant Technology Department" style="width: 135px; height: 135px">
                         <div class="card-body text-center">
                             <!-- Department Title -->
-                            <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا مساعد صيدلي</h5>
+                            <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا الإنتاج الدوائي</h5>
                         </div>
                     </a>
                 </div>
@@ -122,23 +122,7 @@
                         <img src="icons/Dental Technology.png" class="card-img-top" alt="Dental Technology Department" style="width: 135px; height: 135px">
                         <div class="card-body text-center">
                             <!-- Department Title -->
-                            <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا تركيبات الأسنان</h5>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- Pharmaceutical Manufacturing Technology Department -->
-            <div class="mb-3 text-center">
-                <!-- New Card -->
-                <div class="card slide-in-left col-12 d-flex align-items-center justify-content-center" data-aos="fade-right" style="width: 18rem; height: 15rem">
-                    <!-- Department Link -->
-                    <a href="#" class="p-2 text-center btn-incomplete" onclick="showAlert()">
-                        <!-- Department Image -->
-                        <img src="icons/pharmaceutical.png" class="card-img-top" alt="Pharmaceutical Manufacturing Technology Department" style="width: 150px; height: 150px">
-                        <div class="card-body text-center">
-                            <!-- Department Title -->
-                            <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا التصنيع الدوائي</h5>
+                            <h5 class="card-title text-primary-subtle btn-link text-decoration-none text-bold-dark-gray">برنامج تكنولوجيا صناعة تركيبات الأسنان</h5>
                         </div>
                     </a>
                 </div>
